Final Problem 5-21 Example

--- a/MEE340-FluidMechanics/340_Homework_6.ipynb
+++ b/MEE340-FluidMechanics/340_Homework_6.ipynb
@@ -96,7 +96,7 @@
     "Given the information about the wind, and wind turbine, the mechanical energy of air per unit mass, the power generation potential of a wind turbine, and the actual electric power generation are to be determined.\n",
     "\n",
     "## Assumptions:\n",
-    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass and $\\dot{m}e_{mech}$ for a givenmass flow rate.\n",
+    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass and $\\dot{m}e_{mech}$ for a given mass flow rate.\n",
     "\n",
     "## Analysis:"
    ]
@@ -246,7 +246,7 @@
     "%%render long\n",
     "A = (pi*(D_blades**2))/4\n",
     "m_dot = rho_air*V_wind*A\n",
-    "W_max = m*e_mech"
+    "W_max = m_dot*e_mech"
    ]
   },
   {
