--- a/MEE340-FluidMechanics/340_Homework_6.ipynb
+++ b/MEE340-FluidMechanics/340_Homework_6.ipynb
@@ -96,7 +96,7 @@
     "Given the information about the wind, and wind turbine, the mechanical energy of air per unit mass, the power generation potential of a wind turbine, and the actual electric power generation are to be determined.\n",
     "\n",
     "## Assumptions:\n",
-    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass and $\\dot{m}e_{mech}$ for a given mass flow rate.\n",
+    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass, and $\\dot{m}e_{mech}$ for a given mass flow rate.\n",
     "\n",
     "## Analysis:"
    ]
