--- a/MEE340-FluidMechanics/340_Homework_6.ipynb
+++ b/MEE340-FluidMechanics/340_Homework_6.ipynb
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cd651298",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:33:07.778792Z",
-     "start_time": "2023-06-13T20:33:07.553776Z"
+     "end_time": "2023-06-23T19:14:11.285568Z",
+     "start_time": "2023-06-23T19:14:08.944155Z"
     }
    },
    "outputs": [],
@@ -96,19 +96,19 @@
     "Given the information about the wind, and wind turbine, the mechanical energy of air per unit mass, the power generation potential of a wind turbine, and the actual electric power generation are to be determined.\n",
     "\n",
     "## Assumptions:\n",
-    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass, and $\\dot{m}e_{mech}$ for a given mass flow rate.\n",
+    "The power potential of the wind is its kinetic energy, $e_{mech} = ke = \\dfrac{V_{wind}^2}{2}$, per unit mass and $\\dot{m}e_{mech}$ for a given mass flow rate.\n",
     "\n",
     "## Analysis:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "658ecdc8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-14T20:19:38.222543Z",
-     "start_time": "2023-06-14T20:19:38.212373Z"
+     "end_time": "2023-06-23T19:14:15.993845Z",
+     "start_time": "2023-06-23T19:14:15.975695Z"
     }
    },
    "outputs": [
@@ -146,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "d696351d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:42:55.782365Z",
-     "start_time": "2023-06-13T20:42:55.759074Z"
+     "end_time": "2023-06-23T19:14:17.767934Z",
+     "start_time": "2023-06-23T19:14:17.744385Z"
     }
    },
    "outputs": [
@@ -179,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "e8764a28",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:43:17.091164Z",
-     "start_time": "2023-06-13T20:43:17.087561Z"
+     "end_time": "2023-06-23T19:14:19.066336Z",
+     "start_time": "2023-06-23T19:14:19.063162Z"
     }
    },
    "outputs": [
@@ -212,12 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "17525217",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:43:25.526302Z",
-     "start_time": "2023-06-13T20:43:25.464696Z"
+     "end_time": "2023-06-23T19:14:26.995626Z",
+     "start_time": "2023-06-23T19:14:26.936592Z"
     }
    },
    "outputs": [
@@ -228,9 +228,9 @@
        "\\begin{aligned}\n",
        "A &= \\frac{ \\pi \\cdot \\left( D_{blades} \\right) ^{ 2 } }{ 4 } \\\\&= \\frac{ 3.142 \\cdot \\left( 70.000\\ \\mathrm{meter} \\right) ^{ 2 } }{ 4 } \\\\&= 3848.451\\ \\mathrm{meter}^{2}  \\\\[10pt]\n",
        "\\\\[10pt]\n",
-       "m &= \\rho_{air} \\cdot V_{wind} \\cdot A \\\\&= 1.250\\ \\frac{\\mathrm{kilogram}}{\\mathrm{meter}^{3}} \\cdot 10.000\\ \\frac{\\mathrm{meter}}{\\mathrm{second}} \\cdot 3848.451\\ \\mathrm{meter}^{2} \\\\&= 48105.638\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}}  \\\\[10pt]\n",
+       "m_{dot} &= \\rho_{air} \\cdot V_{wind} \\cdot A \\\\&= 1.250\\ \\frac{\\mathrm{kilogram}}{\\mathrm{meter}^{3}} \\cdot 10.000\\ \\frac{\\mathrm{meter}}{\\mathrm{second}} \\cdot 3848.451\\ \\mathrm{meter}^{2} \\\\&= 48105.638\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}}  \\\\[10pt]\n",
        "\\\\[10pt]\n",
-       "W_{max} &= m \\cdot e_{mech} \\\\&= 48105.638\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}} \\cdot 50.000\\ \\frac{\\mathrm{meter}^{2}}{\\mathrm{second}^{2}} \\\\&= 2405281.875\\ \\frac{\\mathrm{kilogram} \\cdot \\mathrm{meter}^{2}}{\\mathrm{second}^{3}}  \\\\[10pt]\n",
+       "W_{max} &= m_{dot} \\cdot e_{mech} \\\\&= 48105.638\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}} \\cdot 50.000\\ \\frac{\\mathrm{meter}^{2}}{\\mathrm{second}^{2}} \\\\&= 2405281.875\\ \\frac{\\mathrm{kilogram} \\cdot \\mathrm{meter}^{2}}{\\mathrm{second}^{3}}  \\\\[10pt]\n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -251,12 +251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3025a5b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:41:54.523554Z",
-     "start_time": "2023-06-13T20:41:54.520016Z"
+     "end_time": "2023-06-23T19:14:33.192727Z",
+     "start_time": "2023-06-23T19:14:33.189343Z"
     }
    },
    "outputs": [
@@ -282,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5c890d32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:42:03.962231Z",
-     "start_time": "2023-06-13T20:42:03.941318Z"
+     "end_time": "2023-06-23T19:14:34.798739Z",
+     "start_time": "2023-06-23T19:14:34.781917Z"
     }
    },
    "outputs": [
@@ -315,12 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "49e81c06",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-13T20:42:13.262498Z",
-     "start_time": "2023-06-13T20:42:13.259218Z"
+     "end_time": "2023-06-23T19:14:38.930575Z",
+     "start_time": "2023-06-23T19:14:38.927321Z"
     }
    },
    "outputs": [
