update example and hw solution

--- a/MEE340-FluidMechanics/HW5_4_56.ipynb
+++ b/MEE340-FluidMechanics/HW5_4_56.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "16a9614b",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,13 @@
     "import numpy as np # numerical python library\n",
     "import matplotlib.pyplot as plt\n",
     "u, A,x,y,rho,h= sp.symbols('u A x y rho h') # define it as symbols\n",
-    "sp.init_printing(use_unicode=True)"
+    "sp.init_printing()\n",
+    "#sp.init_session()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "id": "9cb2b283",
    "metadata": {},
    "outputs": [
@@ -57,6 +58,8 @@
        "\\mathrm{uDotn2} &= \\mathrm{u.dot} { \\mathrm{n2} }  = u.dot { [1,\\ 0,\\ 0] } &= A x \\; \\;\\textrm{(this is dot(u, n2))}\n",
        "\\\\[10pt]\n",
        "\\mathrm{mFlux1} &= \\mathrm{sp.integrate} { \\left( \\rho \\cdot \\mathrm{uDotn1} ,\\  \\left( x ,\\  0 ,\\  h \\right) \\right) } \\\\&= sp.integrate { \\left( \\rho \\cdot A y ,\\  \\left( x ,\\  0 ,\\  h \\right) \\right) } \\\\&= A h \\rho y \\; \\;\\textrm{([note:mass flux in surface 1])}\\\\[10pt]\n",
+       "\\\\[10pt]\n",
+       "\\mathrm{mFlux1} &= A h \\rho y \\; \n",
        "\\\\[10pt]\n",
        "\\mathrm{mFlux2} &= \\mathrm{sp.integrate} { \\left( \\rho \\cdot \\mathrm{uDotn2} ,\\  \\left( y ,\\  0 ,\\  h \\right) \\right) } \\\\&= sp.integrate { \\left( \\rho \\cdot A x ,\\  \\left( y ,\\  0 ,\\  h \\right) \\right) } \\\\&= A h \\rho x \\; \\;\\textrm{(mass flux in surface 2)}\\\\[10pt]\n",
        "\\\\[10pt]\n",
@@ -94,6 +97,7 @@
     "uDotn1 = u.dot(n1) # this is dot(u, n1)\n",
     "uDotn2 = u.dot(n2) # this is dot(u, n2)\n",
     "mFlux1 = sp.integrate(rho*uDotn1,(x,0,h)) # [note:mass flux in surface 1]\n",
+    "mFlux1\n",
     "mFlux2 = sp.integrate(rho*uDotn2,(y,0,h)) # mass flux in surface 2\n",
     "# 1st surface\n",
     "uuDotn1_x = u[0]*uDotn1 # u[0] is u_x\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "id": "83359942",
    "metadata": {},
    "outputs": [
@@ -117,18 +121,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-A*y\n"
+      "Matrix([[A*x, -A*y, 0]])\n"
      ]
     }
    ],
    "source": [
-    "print(u[0])"
+    "print(u)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00605653",
+   "id": "bc62f57f",
    "metadata": {},
    "outputs": [],
    "source": []
