fem and fluid with jupyter

--- a/MEE340-FluidMechanics/AnacondaInstallationJupyter.ipynb
+++ b/MEE340-FluidMechanics/AnacondaInstallationJupyter.ipynb
@@ -31,7 +31,9 @@
    "id": "88ee8462",
    "metadata": {},
    "source": [
-    "## Installation Jupyter Notebook\n",
+    "# Installation Jupyter Notebook\n",
+    "\n",
+    "## For Windows through Anaconda\n",
     "\n",
     "prepared by Jifu Tan, jifutan 'at' niu.edu\n",
     "\n",
@@ -71,11 +73,14 @@
     "</div>\n",
     "\n",
     "7. In the newly opened chrome, you see the following image and choose `new` from the right\n",
+    "\n",
     "<div>\n",
     "<img src=\"attachment:image-7.png\" width=\"800\"/>\n",
     "</div>\n",
     "\n",
+    "\n",
     "8. Here we go. You should see an empty notebook. The one below is something I typed there.\n",
+    "\n",
     "<div>\n",
     "<img src=\"attachment:image-8.png\" width=\"800\"/>\n",
     "</div>"
@@ -83,14 +88,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93e4d4f",
+   "id": "ada8a340",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Install jupyter notebook through Ubuntu on wsl (windows subsystem for linux)\n",
+    "\n",
+    "You can also install jypyter notebook through Ubuntu. See more details on each hyperlink.\n",
+    "\n",
+    "1. install ubuntu through wsl. \n",
+    "https://ubuntu.com/tutorials/install-ubuntu-on-wsl2-on-windows-11-with-gui-support#1-overview\n",
+    "\n",
+    "2. Install jupyter notebook through ubuntu terminal\n",
+    "\n",
+    "`pip install notebook`\n",
+    "\n",
+    "https://jupyter.org/install\n",
+    "\n",
+    "3. By default, jupyter notebook support python. If  you need octave, \n",
+    " - first install octave\n",
+    " \n",
+    " `sudo apt-get install octave`\n",
+    " \n",
+    " https://wiki.octave.org/Octave_for_Debian_systems\n",
+    " \n",
+    " - then install octave kernal for jupyter, in the terminal type\n",
+    " \n",
+    " `pip install octave_kernel`\n",
+    " \n",
+    "    https://github.com/Calysto/octave_kernel\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e709731",
+   "id": "27eddace",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,7 +152,7 @@
    ],
    "mimetype": "text/x-octave",
    "name": "octave",
-   "version": "5.2.0"
+   "version": "6.4.0"
   }
  },
  "nbformat": 4,
