--- a/MEE340-FluidMechanics/HW1_sol.ipynb
+++ b/MEE340-FluidMechanics/HW1_sol.ipynb
@@ -5,19 +5,19 @@
    "id": "47f35d18",
    "metadata": {},
    "source": [
-    "# HW1 warm up\n",
+    "# HW1 solution\n",
     "\n",
-    "## Jifu Tan, A1839063\n",
+    "## Jifu Tan, A1234567\n",
     "\n",
     "Please use jupyter notebook to complete all your assignment. When it is done, please submit your HW solution in `.ipynb` format and upload it to blackboard. You can use this as a template.\n",
     "\n",
-    "## problem 1\n",
+    "## Problem 1\n",
     "Make sure you have successfully installed Jupyter Notebook, study the two examples we posted on blackboard in the lecture notes folder. Pay attention to the following details. Using your own words to explain the following concepts, and you can use examples to help for that.  \n",
-    "    - markdown vs code cell in the notebook\n",
-    "    - different meaning of `#` in markdown cells and code cells\n",
-    "    - LaTeX symbols and equations\n",
-    "    - python libraries: `handcalcs.render, pint, numpy`, etc. \n",
-    "    - difference between values and units. \n",
+    "- markdown vs code cell in the notebook\n",
+    "- different meaning of `#` in markdown cells and code cells\n",
+    "- LaTeX symbols and equations\n",
+    "- python libraries: `handcalcs.render, pint, numpy`, etc. \n",
+    "- difference between values and units. \n",
     "    \n",
     "## Solution\n",
     "\n",
@@ -29,7 +29,7 @@
     "- Values are just numerical digits, while units have the dimension. Together they define physical quantities. \n",
     "\n",
     "    \n",
-    "## problem 2\n",
+    "## Problem 2\n",
     "When you dive into a swimming pool, sometimes you feel uncomfortable in  your ears due to the water pressure. \n",
     "1. Please estimate the force in your eardrum (Tympanic Membrane) due to water pressure. The pressure in water can be calculated as $$P = \\rho g h$$\n",
     "where $\\rho = 1000~kg/m^3$ is the water density, $g = 9.8 ~m/s^2$ is the gravity constant, $h$ is the depth you can dive into the water. You can adjust your own $h$ values based on your swimming skills, but you cannot use value $0$. You may also need the cross section area of your eardrum. You can estimate that or use search engine to find appropriate value. \n",
