--- a/MEE340-FluidMechanics/340_Homework_1.ipynb
+++ b/MEE340-FluidMechanics/340_Homework_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "406e283e",
    "metadata": {
     "ExecuteTime": {
@@ -10,59 +10,14 @@
      "start_time": "2023-06-16T03:24:54.083013Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: handcalcs in ./.local/lib/python3.8/site-packages (1.6.5)\n",
-      "Requirement already satisfied: nbconvert>=6.0 in ./.local/lib/python3.8/site-packages (from handcalcs) (7.4.0)\n",
-      "Requirement already satisfied: innerscope in ./.local/lib/python3.8/site-packages (from handcalcs) (0.5.1)\n",
-      "Requirement already satisfied: more_itertools in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from handcalcs) (8.8.0)\n",
-      "Requirement already satisfied: pyparsing in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from handcalcs) (2.4.7)\n",
-      "Requirement already satisfied: jinja2>=3.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (3.0.1)\n",
-      "Requirement already satisfied: nbclient>=0.5.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (0.5.13)\n",
-      "Requirement already satisfied: defusedxml in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (0.7.1)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (1.4.2)\n",
-      "Requirement already satisfied: markupsafe>=2.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (2.0.1)\n",
-      "Requirement already satisfied: importlib-metadata>=3.6 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (4.4.0)\n",
-      "Requirement already satisfied: jupyterlab-pygments in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (0.1.2)\n",
-      "Requirement already satisfied: beautifulsoup4 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (4.9.3)\n",
-      "Requirement already satisfied: bleach in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (3.3.0)\n",
-      "Requirement already satisfied: traitlets>=5.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (5.3.0)\n",
-      "Requirement already satisfied: mistune<3,>=2.0.3 in ./.local/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (2.0.5)\n",
-      "Requirement already satisfied: packaging in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (20.9)\n",
-      "Requirement already satisfied: tinycss2 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (1.1.0)\n",
-      "Requirement already satisfied: nbformat>=5.1 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (5.4.0)\n",
-      "Requirement already satisfied: pygments>=2.4.1 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (2.9.0)\n",
-      "Requirement already satisfied: jupyter-core>=4.7 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbconvert>=6.0->handcalcs) (4.7.1)\n",
-      "Requirement already satisfied: zipp>=0.5 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from importlib-metadata>=3.6->nbconvert>=6.0->handcalcs) (3.4.1)\n",
-      "Requirement already satisfied: jupyter-client>=6.1.5 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (6.1.12)\n",
-      "Requirement already satisfied: nest-asyncio in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (1.5.1)\n",
-      "Requirement already satisfied: pyzmq>=13 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (22.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (2.8.1)\n",
-      "Requirement already satisfied: tornado>=4.1 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (6.1)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (3.2.0)\n",
-      "Requirement already satisfied: fastjsonschema in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (2.15.1)\n",
-      "Requirement already satisfied: six>=1.11.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (1.16.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (0.17.3)\n",
-      "Requirement already satisfied: setuptools in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (49.6.0.post20210108)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (21.2.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from beautifulsoup4->nbconvert>=6.0->handcalcs) (2.0.1)\n",
-      "Requirement already satisfied: webencodings in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from bleach->nbconvert>=6.0->handcalcs) (0.5.1)\n",
-      "Requirement already satisfied: toolz in /apps/share64/debian10/anaconda/anaconda-7/lib/python3.8/site-packages (from innerscope->handcalcs) (0.11.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install handcalcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e360803f",
    "metadata": {
     "ExecuteTime": {
@@ -70,7 +25,19 @@
      "start_time": "2023-06-30T17:52:09.744203Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pint'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpint\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m UnitRegistry\n\u001b[1;32m      2\u001b[0m u\u001b[38;5;241m=\u001b[39mUnitRegistry(auto_reduce_dimensions\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mhandcalcs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrender\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pint'"
+     ]
+    }
+   ],
    "source": [
     "from pint import UnitRegistry\n",
     "u=UnitRegistry(auto_reduce_dimensions=True)\n",
@@ -247,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
