--- a/MEE340-FluidMechanics/340_Homework_5.ipynb
+++ b/MEE340-FluidMechanics/340_Homework_5.ipynb
@@ -291,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
