--- a/MEE340-FluidMechanics/pint_handcals.ipynb
+++ b/MEE340-FluidMechanics/pint_handcals.ipynb
@@ -1,79 +1,104 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fc584539",
+   "metadata": {},
+   "source": [
+    "# This is an example on HW problem"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "plastic-daughter",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: handcalcs in ./.local/lib/python3.7/site-packages (1.6.1)\n",
-      "Requirement already satisfied: innerscope in ./.local/lib/python3.7/site-packages (from handcalcs) (0.5.1)\n",
-      "Requirement already satisfied: more_itertools in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from handcalcs) (6.0.0)\n",
-      "Requirement already satisfied: nbconvert>=6.0 in ./.local/lib/python3.7/site-packages (from handcalcs) (7.2.3)\n",
-      "Requirement already satisfied: pyparsing in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from handcalcs) (2.3.1)\n",
-      "Requirement already satisfied: toolz in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from innerscope->handcalcs) (0.9.0)\n",
-      "Requirement already satisfied: defusedxml in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (0.5.0)\n",
-      "Requirement already satisfied: importlib-metadata>=3.6; python_version < \"3.10\" in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (4.11.3)\n",
-      "Requirement already satisfied: pygments>=2.4.1 in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (2.13.0)\n",
-      "Requirement already satisfied: tinycss2 in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (1.2.1)\n",
-      "Requirement already satisfied: nbclient>=0.5.0 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (0.5.13)\n",
-      "Requirement already satisfied: packaging in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (19.0)\n",
-      "Requirement already satisfied: jupyterlab-pygments in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (0.2.2)\n",
-      "Requirement already satisfied: jinja2>=3.0 in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (3.1.2)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (1.4.2)\n",
-      "Requirement already satisfied: traitlets>=5.0 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (5.1.1)\n",
-      "Requirement already satisfied: bleach in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (3.1.0)\n",
-      "Requirement already satisfied: mistune<3,>=2.0.3 in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (2.0.4)\n",
-      "Requirement already satisfied: beautifulsoup4 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (4.7.1)\n",
-      "Requirement already satisfied: nbformat>=5.1 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (5.1.2)\n",
-      "Requirement already satisfied: jupyter-core>=4.7 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (4.9.2)\n",
-      "Requirement already satisfied: markupsafe>=2.0 in ./.local/lib/python3.7/site-packages (from nbconvert>=6.0->handcalcs) (2.1.1)\n",
-      "Requirement already satisfied: zipp>=0.5 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from importlib-metadata>=3.6; python_version < \"3.10\"->nbconvert>=6.0->handcalcs) (3.8.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from importlib-metadata>=3.6; python_version < \"3.10\"->nbconvert>=6.0->handcalcs) (4.3.0)\n",
-      "Requirement already satisfied: webencodings>=0.4 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from tinycss2->nbconvert>=6.0->handcalcs) (0.5.1)\n",
-      "Requirement already satisfied: jupyter-client>=6.1.5 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (6.1.5)\n",
-      "Requirement already satisfied: nest-asyncio in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (1.5.5)\n",
-      "Requirement already satisfied: six in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from packaging->nbconvert>=6.0->handcalcs) (1.15.0)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from beautifulsoup4->nbconvert>=6.0->handcalcs) (1.8)\n",
-      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (4.4.0)\n",
-      "Requirement already satisfied: ipython-genutils in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (0.2.0)\n",
-      "Requirement already satisfied: tornado>=4.1 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (5.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (2.8.0)\n",
-      "Requirement already satisfied: pyzmq>=13 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (22.0.3)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=5.1->nbconvert>=6.0->handcalcs) (19.1.0)\n",
-      "Requirement already satisfied: importlib-resources>=1.4.0; python_version < \"3.9\" in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=5.1->nbconvert>=6.0->handcalcs) (5.2.0)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /apps/share64/debian7/anaconda/anaconda-6/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=5.1->nbconvert>=6.0->handcalcs) (0.14.11)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: handcalcs in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (1.6.5)\n",
+      "Requirement already satisfied: innerscope in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from handcalcs) (0.6.0)\n",
+      "Requirement already satisfied: pyparsing in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from handcalcs) (3.1.1)\n",
+      "Requirement already satisfied: nbconvert>=6.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from handcalcs) (6.5.4)\n",
+      "Requirement already satisfied: more_itertools in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from handcalcs) (10.1.0)\n",
+      "Requirement already satisfied: nbclient>=0.5.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (0.5.13)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (1.5.0)\n",
+      "Requirement already satisfied: defusedxml in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (0.7.1)\n",
+      "Requirement already satisfied: lxml in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (4.9.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (4.11.1)\n",
+      "Requirement already satisfied: bleach in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (4.1.0)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (0.8.4)\n",
+      "Requirement already satisfied: jupyterlab-pygments in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (0.1.2)\n",
+      "Requirement already satisfied: packaging in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (22.0)\n",
+      "Requirement already satisfied: pygments>=2.4.1 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (2.11.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (2.1.1)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (0.4)\n",
+      "Requirement already satisfied: nbformat>=5.1 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (5.7.0)\n",
+      "Requirement already satisfied: tinycss2 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (1.2.1)\n",
+      "Requirement already satisfied: traitlets>=5.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (5.7.1)\n",
+      "Requirement already satisfied: jinja2>=3.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (3.1.2)\n",
+      "Requirement already satisfied: jupyter-core>=4.7 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbconvert>=6.0->handcalcs) (5.1.1)\n",
+      "Requirement already satisfied: toolz in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from innerscope->handcalcs) (0.12.0)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jupyter-core>=4.7->nbconvert>=6.0->handcalcs) (2.5.2)\n",
+      "Requirement already satisfied: nest-asyncio in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (1.5.6)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.5 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (7.4.8)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (4.16.0)\n",
+      "Requirement already satisfied: fastjsonschema in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from nbformat>=5.1->nbconvert>=6.0->handcalcs) (2.16.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from beautifulsoup4->nbconvert>=6.0->handcalcs) (2.3.2.post1)\n",
+      "Requirement already satisfied: webencodings in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from bleach->nbconvert>=6.0->handcalcs) (0.5.1)\n",
+      "Requirement already satisfied: six>=1.9.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from bleach->nbconvert>=6.0->handcalcs) (1.16.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (22.1.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert>=6.0->handcalcs) (0.18.0)\n",
+      "Requirement already satisfied: pyzmq>=23.0 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (23.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (2.8.2)\n",
+      "Requirement already satisfied: tornado>=6.2 in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert>=6.0->handcalcs) (6.2)\n",
+      "Requirement already satisfied: Pint in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (0.22)\n",
+      "Requirement already satisfied: typing-extensions in /home/jifutan/miniconda3/envs/edu/lib/python3.10/site-packages (from Pint) (4.4.0)\n"
      ]
     }
    ],
    "source": [
-    "pip install handcalcs"
+    "!pip install handcalcs \n",
+    "!pip install Pint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "given-secret",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import handcalcs.render"
+    "import handcalcs.render\n",
+    "\n",
+    "from math import pi\n",
+    "from pint import UnitRegistry\n",
+    "u=UnitRegistry(auto_reduce_dimensions=True)\n",
+    "#u.default_format = '~'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "hispanic-economy",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pint'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pi\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpint\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m UnitRegistry\n\u001b[1;32m      3\u001b[0m u\u001b[38;5;241m=\u001b[39mUnitRegistry(auto_reduce_dimensions\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pint'"
+     ]
+    }
+   ],
    "source": [
     "from math import pi\n",
     "from pint import UnitRegistry\n",
@@ -83,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "biblical-protest",
    "metadata": {},
    "outputs": [
@@ -134,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "sized-chancellor",
    "metadata": {},
    "outputs": [
@@ -173,7 +198,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "pacific-musical",
    "metadata": {},
@@ -200,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "improving-romance",
    "metadata": {},
    "outputs": [
@@ -243,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "infectious-crown",
    "metadata": {},
    "outputs": [
@@ -291,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "alternate-penny",
    "metadata": {},
    "outputs": [
@@ -307,7 +331,7 @@
        "327.8591827693044 <Unit('newton')>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "caroline-madonna",
    "metadata": {},
    "outputs": [
@@ -334,20 +358,28 @@
        "-2385.7169441238743 <Unit('newton')>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F_Rx.to('N') # pint version\n",
+    "F_Rx.to(u.N) # pint version\n",
     "#u.convert_to(F_Rx,u.N) # sympy.physics.units version, it is ugly"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d438dde3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
