corrected Newton Lab

--- a/MEE380-NumericalMethods/NewtonMethod.ipynb
+++ b/MEE380-NumericalMethods/NewtonMethod.ipynb
@@ -85,9 +85,9 @@
     "   toc\n",
     "   ```\n",
     "3. Modify the script to solve the colebrook equation using newtons method. You need to change `line 2-5`: $$\\dfrac{1}{\\sqrt{f}}=-2log10(\\dfrac{2.51}{1e6\\sqrt{f}})$$\n",
-    "4. Sometimes derivative is difficult to calculate, instead we can use the slop between two nearby points as an approximation to the seslope. see chapter 15: secant method https://www.math.hkust.edu.hk/~machas/numerical-methods-for-engineers.pdf. Please develop a function\n",
+    "4. Sometimes derivative is difficult to calculate, instead we can use the slop between two nearby points as an approximation to the seslope. see chapter 15: secant method https://www.math.hkust.edu.hk/~machas/numerical-methods-for-engineers.pdf. Please write a function based on the secant method, and test it with a simple problem $f(x)=x^2-4$. The header of the function is given below, you have to determine what are your inputs and outputs. As secant is similar to Newton's method, you can use the code `newtonSolver` as a starting point and modify it. **This is learning by analogy!**\n",
     "   ```\n",
-    "   function [what you need for outputs]=secantMethods(what you need for inputs)\n",
+    "   function [what you need for outputs]=secantMethod(what you need for inputs)\n",
     "   \n",
     "       %% put your code here\n",
     "\n",
