corrected Newton Lab

--- a/MEE380-NumericalMethods/NewtonMethod.ipynb
+++ b/MEE380-NumericalMethods/NewtonMethod.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7ec55112-8626-4653-9d7b-3823aa0a52c1",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
     "tic\n",
     "[ xr_n, my_error_n, it_n]=newtonSolver(f, df, x0, tol);\n",
     "toc\n",
-    "printf('\\n newton root\\n')\n",
+    "fprintf('\\n newton root\\n')\n",
     "xr_n\n",
     "it_n\n",
     "my_error_n\n"
