--- a/MEE380-NumericalMethods/Lab_heatTransfer.ipynb
+++ b/MEE380-NumericalMethods/Lab_heatTransfer.ipynb
@@ -15,7 +15,7 @@
     "$$\\dfrac{\\partial T}{\\partial t}=\\alpha(\\dfrac{\\partial^2 T}{\\partial x^2}+\\dfrac{\\partial^2 T}{\\partial y^2})$$\n",
     "![image.png](attachment:1d6d9ea3-4954-4687-af5a-8730a36735cd.png)\n",
     "1. annotate the steady state code for each line of the code and explain what it is doing, name your code with annotations as `steady.m`\n",
-    "2. Study the slides provided in the pdf, and annotate the corresponding explicit time stepping code and explain what it is doing, name your code with annotation as `explicitExample.m`\n",
+    "2. Study the slides provided in the pdf, and annotate the corresponding explicit time stepping code and explain what it is doing, name your code with annotation as `explicitExample.m`. Try to increase `dt`change the line `dt = 0.1*h^2/(2*alpha);` to `dt = h^2/(2*alpha);`\n",
     "3. conver it the `explicitExample.m` into a script `heatScript.m` and a function `heatExplcit.m`. The first few lines of `heatExplcit.m` is given below\n",
     "\n",
     "```\n",
