heat lab update

--- a/MEE380-NumericalMethods/Lab_heatTransfer.ipynb
+++ b/MEE380-NumericalMethods/Lab_heatTransfer.ipynb
@@ -15,7 +15,7 @@
     "$$\\dfrac{\\partial T}{\\partial t}=\\alpha(\\dfrac{\\partial^2 T}{\\partial x^2}+\\dfrac{\\partial^2 T}{\\partial y^2})$$\n",
     "![image.png](attachment:1d6d9ea3-4954-4687-af5a-8730a36735cd.png)\n",
     "1. annotate the steady state code for each line of the code and explain what it is doing, name your code with annotations as `steady.m`\n",
-    "2. Study the slides provided in the pdf, and annotate the corresponding explicit time stepping code and explain what it is doing, name your code with annotation as `explicitExample.m`. Try to increase `dt`change the line `dt = 0.1*h^2/(2*alpha);` to `dt = h^2/(2*alpha);`\n",
+    "2. Study the slides provided in the pdf, and annotate the corresponding explicit time stepping code and explain what it is doing, name your code with annotation as `explicitExample.m`. Try to increase `dt` by 10 times, e.g., change the line `dt = 0.1*h^2/(2*alpha);` to `dt = h^2/(2*alpha);`, see what happens to the simulation. That is an stability issue caused by big `dt`.\n",
     "3. conver it the `explicitExample.m` into a script `heatScript.m` and a function `heatExplcit.m`. The first few lines of `heatExplcit.m` is given below\n",
     "\n",
     "```\n",
@@ -26,8 +26,9 @@
     "% T0: initial temperature guess for gauss-seidel solver\n",
     "end\n",
     "```\n",
+    "You should call your function `heatExplicit` from the script `heatScript.m` file. \n",
     "\n",
-    "4. Bonus: if you have time, please consider solve the transient problem using implicit method, name your function as `heatImplicit.m`, call the function from `heatScript.m` The difference between implicit and explicit time stepping is shown in the slides.\n",
+    "4. Bonus: if you have time, please consider solve the transient problem using implicit method, name your function as `heatImplicit.m`, call the function from `heatScript.m` The difference between implicit and explicit time stepping is shown in the slides. One advantage of implicit method is that it is unconditionally stable, you can try arbitrary time step size `dt`. For example,  `dt = h^2/(2*alpha)` will not have any stability issue.  \n",
     "\n",
     "# Submission\n",
     "\n",
